=====================
Django MPTT CHANGELOG
=====================

.. contents::

Version 0.1
===========

Packaged from revision 37 in Subversion.

Fri 4th Jan, 2008
-----------------

* Added a ``tree_info`` template filter and a ``full_tree_for_model``
  template tag.

Thu 3rd Jan, 2008
-----------------

* Updated documentation with latest changes, a high level overview of
  features and more details about node movement. Moved detailed
  information about MPTT setup internals to the end of the document.

* Reworked exceptions - ``InvalidMove`` is now raised when an invalid
  move is attempted.

* Added a ``move_to`` convenience method to ``Model`` instances.

* Implemented the ``position`` argument for ``make_child_node`` and
  ``move_node`` in ``TreeManager``. The node movement API can now be
  used to move any node to an arbitrary point in any tree.

* Implemented the ``position`` argument for
  ``TreeManager.move_to_new_tree``.

* Implemented a ``position`` argument for
  ``TreeManager.move_within_tree``. The node being moved can now be made
  a sibling, first child or last child of the target node.

* Added a ``move_node`` method to ``TreeManager``, to take care of
  automatically calling the appropriate node movement manager method.

* Combined a number of SQL queries into single queries using ``CASE``
  operators to reduce the overall number of queries required to move
  tree nodes around.

Wed 2nd Jan, 2008
-----------------

* Fixed a bug in ``TreeManager.move_within_tree`` when no level change
  is required.

* Fixed a bug in ``TreeManager.move_within_tree`` - it now takes into
  account whether or not the new parent's right value is greater than
  that of the node which is being moved.

* Added tests for manually moving nodes using the ``TreeManager``
  methods.

* Extracted logic for moving a ``Model`` instance to a different parent
  within its current tree from ``mptt.signals.pre_save`` into the
  ``move_within_tree`` method in ``TreeManager``.
